2009-10-16  Ivan Maidanski <ivmai@mail.ru> (really Petter Urkedal)

	* configure.ac: Add threads support for OpenBSD case (threads may
	not work correctly for it).
	* configure: Regenerate.

2009-10-15  Ivan Maidanski <ivmai@mail.ru> (really Petter Urkedal)

	* acinclude.m4: Rename to m4/gc_set_version.m4.
	* aclocal.m4: Regenerate.
	* configure: Ditto.
	* Makefile.in: Ditto.
	* m4/libtool.m4: Delete the file.
	* m4/lt~obsolete.m4: Ditto.
	* m4/ltoptions.m4: Ditto.
	* m4/ltsugar.m4: Ditto.
	* m4/ltversion.m4: Ditto.

2009-10-15  Ivan Maidanski <ivmai@mail.ru>

	* include/private/gcconfig.h: Define DebugBreak() as _exit(-1) for
	x86mingw32ce toolchain to workaround the incorrect DebugBreak()
	declaration in winbase.h (the workaround would turn into a no-op
	when DebugBreak() will be defined as a macro in the toolchain).

2009-10-15  Ivan Maidanski <ivmai@mail.ru>

	* include/private/gcconfig.h: Recognize __i386__ if WinCE (for
	x86mingw32ce toolchain).
	* include/private/gcconfig.h (NO_GETENV): Don't define for CeGCC
	toolchain (or if already defined).
	* include/private/gcconfig.h (NO_GETENV_WIN32): New macro (always
	defined for WinCE or if NO_GETENV is defined).
	* misc.c (GC_CreateLogFile): Use NO_GETENV_WIN32 macro instead of
	NO_GETENV one.

2009-10-15  Ivan Maidanski <ivmai@mail.ru> (really Petter Urkedal)

	* configure.ac: Add AC_CONFIG_MACRO_DIR([m4]).
	* Makefile.am: Add "ACLOCAL_AMFLAGS = -I m4".
	* libtool.m4: Remove.
	* aclocal.m4: Regenerate.
	* configure: Ditto.
	* Makefile.in: Ditto.
	* m4/libtool.m4: New file (generated).
	* m4/lt~obsolete.m4: Ditto.
	* m4/ltoptions.m4: Ditto.
	* m4/ltsugar.m4: Ditto.
	* m4/ltversion.m4: Ditto.

2009-10-10  Ivan Maidanski <ivmai@mail.ru>

	* include/gc.h (GC_UNDERSCORE_STDCALL): Recognize new macro;
	prefix GC_CreateThread and GC_ExitThread with '_' if defined.
	* doc/README.macros (GC_UNDERSCORE_STDCALL): Document.

2009-10-09  Ivan Maidanski <ivmai@mail.ru>
